--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aviso de Privacidad - Flux</title>
+    <style>
+        body { font-family: sans-serif; line-height: 1.6; padding: 20px; color: #333; }
+        .container { max-width: 800px; margin: auto; }
+        h1 { color: #004a99; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Aviso de Privacidad Simplificado</h1>
+        <p><strong>Responsable:</strong> [NOMBRE DE LA CLÍNICA DEL CLIENTE]</p>
+        <p>Este consultorio utiliza tecnología de <strong>Flux</strong> para la gestión de citas por WhatsApp...</p>
+        </div>
+</body>
+</html>
