--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p style="text-align: center; font-style: italic; color: #888;">Última actualización: Febrero 2026</p>
 
         <h2>1. Responsable de sus Datos</h2>
-        <p>Los datos personales recabados son tratados por <strong>[NOMBRE DE LA CLÍNICA]</strong>, con la infraestructura tecnológica de <strong>FLUX</strong> actuando en calidad de ENCARGADO bajo la Ley Federal de Protección de Datos Personales en Posesión de los Particulares (LFPDPPP).</p>
+        <p>Los datos personales recabados son tratados por <strong>LA CLÍNICA</strong>, con la infraestructura tecnológica de <strong>FLUX</strong> actuando en calidad de ENCARGADO bajo la Ley Federal de Protección de Datos Personales en Posesión de los Particulares (LFPDPPP).</p>
 
         <h2>2. Datos que Recabamos</h2>
         <p>Para la gestión eficiente de sus citas, nuestro sistema de Inteligencia Artificial procesará: Nombre, Teléfono y Motivo de Consulta. <br><br><strong>Importante:</strong> No solicitamos datos financieros ni historial clínico profundo por este medio.</p>
