--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aviso de Privacidad | FLUX</title>
+    <title>Aviso de Privacidad</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -74,7 +74,7 @@
 <body>
 
     <div class="header">
-        <h1>FLUX SECURITY</h1>
+        <h1>AVISO DE PRIVACIDAD</h1>
         <small>Portal de Cumplimiento Normativo</small>
     </div>
 
